KOD-16.2: deleted having

--- a/kodilla-sql/src/main/java/com/kodilla/sql/KOD-16.2
+++ b/kodilla-sql/src/main/java/com/kodilla/sql/KOD-16.2
@@ -6,5 +6,4 @@ FROM ISSUES I JOIN USERS U ON I.USER_ID_ASSIGNEDTO = U.ID;
 
 SELECT U.FIRSTNAME, U.LASTNAME, COUNT(*) AS ISSUESS_NUMBER
 FROM ISSUES I JOIN USERS U ON I.USER_ID_ASSIGNEDTO = U.ID
-GROUP BY U.ID
-HAVING COUNT(*)>0;
+GROUP BY U.ID;
